--- a/config-builder/documentation/devices/s1-ce01.md
+++ b/config-builder/documentation/devices/s1-ce01.md
@@ -10,6 +10,7 @@
   - [Management API HTTP](#management-api-http)
 - [Authentication](#authentication)
   - [Local Users](#local-users)
+  - [AAA Authentication](#aaa-authentication)
   - [AAA Authorization](#aaa-authorization)
 - [Aliases Device Configuration](#aliases-device-configuration)
 - [Interfaces](#interfaces)
@@ -182,6 +183,22 @@ username arista privilege 15 role network-admin secret sha512 <removed>
 username tom privilege 15 role network-admin secret sha512 <removed>
 ```
 
+### AAA Authentication
+
+#### AAA Authentication Summary
+
+| Type | Sub-type | User Stores |
+| ---- | -------- | ---------- |
+
+Policy local allow-nopassword-remote-login has been enabled.
+
+#### AAA Authentication Device Configuration
+
+```eos
+aaa authentication policy local allow-nopassword-remote-login
+!
+```
+
 ### AAA Authorization
 
 #### AAA Authorization Summary
@@ -264,6 +281,7 @@ service routing protocols model multi-agent
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
+| ATM | True |
 | ETHERNET_VPN | True |
 | MGMT | True |
 
@@ -272,6 +290,7 @@ service routing protocols model multi-agent
 ```eos
 !
 ip routing
+ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf MGMT
 ```
@@ -283,6 +302,7 @@ ip routing vrf MGMT
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
+| ATM | false |
 | default | false |
 | ETHERNET_VPN | false |
 | MGMT | false |
@@ -308,12 +328,15 @@ ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
+| ATM | enabled |
 | ETHERNET_VPN | enabled |
 | MGMT | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
+!
+vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
