--- a/config-builder/documentation/devices/s1-ce03.md
+++ b/config-builder/documentation/devices/s1-ce03.md
@@ -10,6 +10,7 @@
   - [Management API HTTP](#management-api-http)
 - [Authentication](#authentication)
   - [Local Users](#local-users)
+  - [AAA Authentication](#aaa-authentication)
   - [AAA Authorization](#aaa-authorization)
 - [Aliases Device Configuration](#aliases-device-configuration)
 - [VLANs](#vlans)
@@ -23,6 +24,10 @@
   - [IP Routing](#ip-routing)
   - [IPv6 Routing](#ipv6-routing)
   - [Static Routes](#static-routes)
+  - [Router BGP](#router-bgp)
+- [Filters](#filters)
+  - [Prefix-lists](#prefix-lists)
+  - [Route-maps](#route-maps)
 - [VRF Instances](#vrf-instances)
   - [VRF Instances Summary](#vrf-instances-summary)
   - [VRF Instances Device Configuration](#vrf-instances-device-configuration)
@@ -186,6 +191,22 @@ username arista privilege 15 role network-admin secret sha512 <removed>
 username tom privilege 15 role network-admin secret sha512 <removed>
 ```
 
+### AAA Authentication
+
+#### AAA Authentication Summary
+
+| Type | Sub-type | User Stores |
+| ---- | -------- | ---------- |
+
+Policy local allow-nopassword-remote-login has been enabled.
+
+#### AAA Authentication Device Configuration
+
+```eos
+aaa authentication policy local allow-nopassword-remote-login
+!
+```
+
 ### AAA Authorization
 
 #### AAA Authorization Summary
@@ -233,13 +254,13 @@ alias summary6 show ipv6 bgp summary
 
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
-| 1013 | SVC01_C1_VLAN_SITE01_PE03 | - |
+| 1113 | SVC01_C1_VLAN_SITE01_PE03 | - |
 
 ### VLANs Device Configuration
 
 ```eos
 !
-vlan 1013
+vlan 1113
    name SVC01_C1_VLAN_SITE01_PE03
 ```
 
@@ -256,6 +277,18 @@ vlan 1013
 
 *Inherited from Port-Channel Interface
 
+##### Encapsulation Dot1q Interfaces
+
+| Interface | Description | Vlan ID | Dot1q VLAN Tag | Dot1q Inner VLAN Tag |
+| --------- | ----------- | ------- | -------------- | -------------------- |
+| Ethernet2.101 | L3VPN Only USE CASE | - | 101 | - |
+
+##### IPv4
+
+| Interface | Description | Channel Group | IP Address | VRF |  MTU | Shutdown | ACL In | ACL Out |
+| --------- | ----------- | ------------- | ---------- | ----| ---- | -------- | ------ | ------- |
+| Ethernet2.101 | L3VPN Only USE CASE | - | 10.2.0.1/31 | ATM | - | False | - | - |
+
 #### Ethernet Interfaces Device Configuration
 
 ```eos
@@ -264,6 +297,17 @@ interface Ethernet1
    description to s1-pe02 ethernet4
    switchport trunk allowed vlan 1-4094
    switchport mode trunk
+!
+interface Ethernet2
+   no shutdown
+   no switchport
+!
+interface Ethernet2.101
+   description L3VPN Only USE CASE
+   no shutdown
+   encapsulation dot1q vlan 101
+   vrf ATM
+   ip address 10.2.0.1/31
 ```
 
 ### VLAN Interfaces
@@ -272,19 +316,19 @@ interface Ethernet1
 
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
-| Vlan1013 | SVC01_C1_VLAN_SITE01_PE03 - VRF ETHERNET_VPN | ETHERNET_VPN | - | False |
+| Vlan1113 | SVC01_C1_VLAN_SITE01_PE03 - VRF ETHERNET_VPN | ETHERNET_VPN | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
-| Vlan1013 |  ETHERNET_VPN  |  10.1.3.12/24  |  -  |  -  |  -  |  -  |
+| Vlan1113 |  ETHERNET_VPN  |  10.1.3.12/24  |  -  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
 ```eos
 !
-interface Vlan1013
+interface Vlan1113
    description SVC01_C1_VLAN_SITE01_PE03 - VRF ETHERNET_VPN
    no shutdown
    vrf ETHERNET_VPN
@@ -309,6 +353,7 @@ service routing protocols model multi-agent
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
+| ATM | True |
 | ETHERNET_VPN | True |
 | MGMT | True |
 
@@ -317,6 +362,7 @@ service routing protocols model multi-agent
 ```eos
 !
 ip routing
+ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf MGMT
 ```
@@ -328,6 +374,7 @@ ip routing vrf MGMT
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
+| ATM | false |
 | default | false |
 | ETHERNET_VPN | false |
 | MGMT | false |
@@ -340,13 +387,106 @@ ip routing vrf MGMT
 | --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
 | MGMT | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
 | ETHERNET_VPN | 0.0.0.0/0 | 10.1.3.1 | - | 1 | - | - | - |
+| ATM | 10.2.254.0/24 | - | Null0 | 1 | - | - | - |
 
 #### Static Routes Device Configuration
 
 ```eos
 !
+ip route vrf ATM 10.2.254.0/24 Null0
 ip route vrf ETHERNET_VPN 0.0.0.0/0 10.1.3.1
 ip route vrf MGMT 0.0.0.0/0 192.168.2.1
+```
+
+### Router BGP
+
+ASN Notation: asplain
+
+#### Router BGP Summary
+
+| BGP AS | Router ID |
+| ------ | --------- |
+| 65101 | - |
+
+#### Router BGP Peer Groups
+
+##### MPLS-BACKBONE
+
+| Settings | Value |
+| -------- | ----- |
+| Remote AS | 65000 |
+| Send community | all |
+
+#### BGP Neighbors
+
+| Neighbor | Remote AS | VRF | Shutdown | Send-community | Maximum-routes | Allowas-in | BFD | RIB Pre-Policy Retain | Route-Reflector Client | Passive | TTL Max Hops |
+| -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
+| 10.2.0.0 | Inherited from peer group MPLS-BACKBONE | ATM | - | Inherited from peer group MPLS-BACKBONE | - | - | - | - | - | - | - |
+
+#### Router BGP VRFs
+
+| VRF | Route-Distinguisher | Redistribute |
+| --- | ------------------- | ------------ |
+| ATM | - | connected<br>static |
+
+#### Router BGP Device Configuration
+
+```eos
+!
+router bgp 65101
+   neighbor MPLS-BACKBONE peer group
+   neighbor MPLS-BACKBONE remote-as 65000
+   neighbor MPLS-BACKBONE description MPLS CONNECTITVITY
+   neighbor MPLS-BACKBONE send-community
+   !
+   vrf ATM
+      neighbor 10.2.0.0 peer group MPLS-BACKBONE
+      neighbor 10.2.0.0 description MPLS CONNECTITVITY S1-PE03
+      neighbor 10.2.0.0 route-map RM-MARK-ATM-CE03 out
+      redistribute connected
+      redistribute static
+      !
+      address-family ipv4
+         neighbor 10.2.0.0 activate
+```
+
+## Filters
+
+### Prefix-lists
+
+#### Prefix-lists Summary
+
+##### PL-ATM-FAKE-PREFIX
+
+| Sequence | Action |
+| -------- | ------ |
+| 10 | permit 10.2.254.0/24 |
+
+#### Prefix-lists Device Configuration
+
+```eos
+!
+ip prefix-list PL-ATM-FAKE-PREFIX
+   seq 10 permit 10.2.254.0/24
+```
+
+### Route-maps
+
+#### Route-maps Summary
+
+##### RM-MARK-ATM-CE03
+
+| Sequence | Type | Match | Set | Sub-Route-Map | Continue |
+| -------- | ---- | ----- | --- | ------------- | -------- |
+| 10 | permit | - | community 65000:10090 additive | - | - |
+
+#### Route-maps Device Configuration
+
+```eos
+!
+route-map RM-MARK-ATM-CE03 permit 10
+   description Mark FAKE route with community 65000:12013
+   set community 65000:10090 additive
 ```
 
 ## VRF Instances
@@ -355,12 +495,15 @@ ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
+| ATM | enabled |
 | ETHERNET_VPN | enabled |
 | MGMT | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
+!
+vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
