--- a/config-builder/documentation/devices/s1-p01.md
+++ b/config-builder/documentation/devices/s1-p01.md
@@ -13,6 +13,7 @@
 - [Authentication](#authentication)
   - [Local Users](#local-users)
   - [Enable Password](#enable-password)
+  - [AAA Authentication](#aaa-authentication)
   - [AAA Authorization](#aaa-authorization)
 - [Aliases Device Configuration](#aliases-device-configuration)
 - [Spanning Tree](#spanning-tree)
@@ -231,6 +232,22 @@ username tom privilege 15 role network-admin secret sha512 <removed>
 ### Enable Password
 
 Enable password has been disabled
+
+### AAA Authentication
+
+#### AAA Authentication Summary
+
+| Type | Sub-type | User Stores |
+| ---- | -------- | ---------- |
+
+Policy local allow-nopassword-remote-login has been enabled.
+
+#### AAA Authentication Device Configuration
+
+```eos
+aaa authentication policy local allow-nopassword-remote-login
+!
+```
 
 ### AAA Authorization
 
@@ -626,7 +643,6 @@ ASN Notation: asdot
 
 | BGP Tuning |
 | ---------- |
-| update wait-install |
 | no bgp default ipv4-unicast |
 | maximum-paths 4 ecmp 4 |
 
@@ -688,7 +704,6 @@ ASN Notation: asdot
 router bgp 65000
    bgp asn notation asdot
    router-id 10.255.0.1
-   update wait-install
    no bgp default ipv4-unicast
    bgp cluster-id 10.255.0.1
    maximum-paths 4 ecmp 4
