--- a/config-builder/documentation/devices/s1-p02.md
+++ b/config-builder/documentation/devices/s1-p02.md
@@ -13,6 +13,7 @@
 - [Authentication](#authentication)
   - [Local Users](#local-users)
   - [Enable Password](#enable-password)
+  - [AAA Authentication](#aaa-authentication)
   - [AAA Authorization](#aaa-authorization)
 - [Aliases Device Configuration](#aliases-device-configuration)
 - [Spanning Tree](#spanning-tree)
@@ -229,6 +230,22 @@ username tom privilege 15 role network-admin secret sha512 <removed>
 ### Enable Password
 
 Enable password has been disabled
+
+### AAA Authentication
+
+#### AAA Authentication Summary
+
+| Type | Sub-type | User Stores |
+| ---- | -------- | ---------- |
+
+Policy local allow-nopassword-remote-login has been enabled.
+
+#### AAA Authentication Device Configuration
+
+```eos
+aaa authentication policy local allow-nopassword-remote-login
+!
+```
 
 ### AAA Authorization
 
