--- a/config-builder/documentation/devices/s1-pe02.md
+++ b/config-builder/documentation/devices/s1-pe02.md
@@ -13,6 +13,7 @@
 - [Authentication](#authentication)
   - [Local Users](#local-users)
   - [Enable Password](#enable-password)
+  - [AAA Authentication](#aaa-authentication)
   - [AAA Authorization](#aaa-authorization)
 - [Aliases Device Configuration](#aliases-device-configuration)
 - [Spanning Tree](#spanning-tree)
@@ -39,6 +40,10 @@
   - [MPLS Interfaces](#mpls-interfaces)
 - [Multicast](#multicast)
   - [IP IGMP Snooping](#ip-igmp-snooping)
+- [Filters](#filters)
+  - [IP Community-lists](#ip-community-lists)
+  - [Prefix-lists](#prefix-lists)
+  - [Route-maps](#route-maps)
 - [VRF Instances](#vrf-instances)
   - [VRF Instances Summary](#vrf-instances-summary)
   - [VRF Instances Device Configuration](#vrf-instances-device-configuration)
@@ -234,6 +239,22 @@ username tom privilege 15 role network-admin secret sha512 <removed>
 ### Enable Password
 
 Enable password has been disabled
+
+### AAA Authentication
+
+#### AAA Authentication Summary
+
+| Type | Sub-type | User Stores |
+| ---- | -------- | ---------- |
+
+Policy local allow-nopassword-remote-login has been enabled.
+
+#### AAA Authentication Device Configuration
+
+```eos
+aaa authentication policy local allow-nopassword-remote-login
+!
+```
 
 ### AAA Authorization
 
@@ -548,7 +569,6 @@ ASN Notation: asdot
 
 | BGP Tuning |
 | ---------- |
-| update wait-install |
 | no bgp default ipv4-unicast |
 | maximum-paths 4 ecmp 4 |
 
@@ -593,13 +613,13 @@ ASN Notation: asdot
 router bgp 65000
    bgp asn notation asdot
    router-id 10.255.1.2
-   update wait-install
    no bgp default ipv4-unicast
    maximum-paths 4 ecmp 4
    neighbor MPLS-OVERLAY-PEERS peer group
    neighbor MPLS-OVERLAY-PEERS remote-as 65000
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
+   neighbor MPLS-OVERLAY-PEERS route-map RM-MANAGE-WITH-COMMUNITIES in
    neighbor MPLS-OVERLAY-PEERS password 7 <removed>
    neighbor MPLS-OVERLAY-PEERS send-community
    neighbor MPLS-OVERLAY-PEERS maximum-routes 0
@@ -609,6 +629,7 @@ router bgp 65000
    neighbor 10.255.0.4 description s2-p02_Loopback0
    !
    address-family evpn
+      bgp additional-paths receive
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
       neighbor MPLS-OVERLAY-PEERS activate
    !
@@ -675,6 +696,69 @@ mpls ip
 #### IP IGMP Snooping Device Configuration
 
 ```eos
+```
+
+## Filters
+
+### IP Community-lists
+
+#### IP Community-lists Summary
+
+| Name | Action | Communities / Regexp |
+| ---- | ------ | -------------------- |
+| CL-INGRESS-ATM-LP-90 | permit | 65000:10090 |
+| CL-INGRESS-ATM-LP-110 | permit | 65000:10110 |
+
+#### IP Community-lists Device Configuration
+
+```eos
+!
+ip community-list CL-INGRESS-ATM-LP-90 permit 65000:10090
+ip community-list CL-INGRESS-ATM-LP-110 permit 65000:10110
+```
+
+### Prefix-lists
+
+#### Prefix-lists Summary
+
+##### PL-ATM-FAKE-PREFIX
+
+| Sequence | Action |
+| -------- | ------ |
+| 10 | permit 10.2.254.0/24 |
+
+#### Prefix-lists Device Configuration
+
+```eos
+!
+ip prefix-list PL-ATM-FAKE-PREFIX
+   seq 10 permit 10.2.254.0/24
+```
+
+### Route-maps
+
+#### Route-maps Summary
+
+##### RM-MANAGE-WITH-COMMUNITIES
+
+| Sequence | Type | Match | Set | Sub-Route-Map | Continue |
+| -------- | ---- | ----- | --- | ------------- | -------- |
+| 10 | permit | community CL-INGRESS-ATM-LP-90 | local-preference 90 | - | - |
+| 20 | permit | community CL-INGRESS-ATM-LP-110 | local-preference 110 | - | - |
+
+#### Route-maps Device Configuration
+
+```eos
+!
+route-map RM-MANAGE-WITH-COMMUNITIES permit 10
+   description Configure LP to 90 for ATM
+   match community CL-INGRESS-ATM-LP-90
+   set local-preference 90
+!
+route-map RM-MANAGE-WITH-COMMUNITIES permit 20
+   description Configure LP to 110 for ATM
+   match community CL-INGRESS-ATM-LP-110
+   set local-preference 110
 ```
 
 ## VRF Instances
