--- a/config-builder/documentation/devices/s1-pe04.md
+++ b/config-builder/documentation/devices/s1-pe04.md
@@ -13,6 +13,7 @@
 - [Authentication](#authentication)
   - [Local Users](#local-users)
   - [Enable Password](#enable-password)
+  - [AAA Authentication](#aaa-authentication)
   - [AAA Authorization](#aaa-authorization)
 - [Aliases Device Configuration](#aliases-device-configuration)
 - [Spanning Tree](#spanning-tree)
@@ -43,6 +44,10 @@
   - [MPLS Interfaces](#mpls-interfaces)
 - [Multicast](#multicast)
   - [IP IGMP Snooping](#ip-igmp-snooping)
+- [Filters](#filters)
+  - [IP Community-lists](#ip-community-lists)
+  - [Prefix-lists](#prefix-lists)
+  - [Route-maps](#route-maps)
 - [VRF Instances](#vrf-instances)
   - [VRF Instances Summary](#vrf-instances-summary)
   - [VRF Instances Device Configuration](#vrf-instances-device-configuration)
@@ -239,6 +244,22 @@ username tom privilege 15 role network-admin secret sha512 <removed>
 
 Enable password has been disabled
 
+### AAA Authentication
+
+#### AAA Authentication Summary
+
+| Type | Sub-type | User Stores |
+| ---- | -------- | ---------- |
+
+Policy local allow-nopassword-remote-login has been enabled.
+
+#### AAA Authentication Device Configuration
+
+```eos
+aaa authentication policy local allow-nopassword-remote-login
+!
+```
+
 ### AAA Authorization
 
 #### AAA Authorization Summary
@@ -314,13 +335,13 @@ vlan internal order ascending range 1006 1199
 
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
-| 1014 | SVC01_C1_VLAN_SITE01_PE04 | - |
+| 1114 | SVC01_C1_VLAN_SITE01_PE04 | - |
 
 ### VLANs Device Configuration
 
 ```eos
 !
-vlan 1014
+vlan 1114
    name SVC01_C1_VLAN_SITE01_PE04
 ```
 
@@ -338,12 +359,19 @@ vlan 1014
 
 *Inherited from Port-Channel Interface
 
+##### Encapsulation Dot1q Interfaces
+
+| Interface | Description | Vlan ID | Dot1q VLAN Tag | Dot1q Inner VLAN Tag |
+| --------- | ----------- | ------- | -------------- | -------------------- |
+| Ethernet5.101 | L3VPN Only USE CASE | - | 101 | - |
+
 ##### IPv4
 
 | Interface | Description | Channel Group | IP Address | VRF |  MTU | Shutdown | ACL In | ACL Out |
 | --------- | ----------- | ------------- | ---------- | ----| ---- | -------- | ------ | ------- |
 | Ethernet1 | P2P_s1-p01_Ethernet4 | - | 10.255.3.12/31 | default | 1500 | False | - | - |
 | Ethernet2 | P2P_s1-p02_Ethernet4 | - | 10.255.3.14/31 | default | 1500 | False | - | - |
+| Ethernet5.101 | L3VPN Only USE CASE | - | 10.2.0.2/31 | ATM | - | False | - | - |
 
 ##### ISIS
 
@@ -392,6 +420,17 @@ interface Ethernet4
    switchport trunk allowed vlan 1-4094
    switchport mode trunk
    switchport
+!
+interface Ethernet5
+   no shutdown
+   no switchport
+!
+interface Ethernet5.101
+   description L3VPN Only USE CASE
+   no shutdown
+   encapsulation dot1q vlan 101
+   vrf ATM
+   ip address 10.2.0.2/31
 ```
 
 ### Loopback Interfaces
@@ -403,14 +442,16 @@ interface Ethernet4
 | Interface | Description | VRF | IP Address |
 | --------- | ----------- | --- | ---------- |
 | Loopback0 | ROUTER_ID | default | 10.255.1.4/32 |
-| Loopback1001 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | 10.1.255.4/32 |
+| Loopback1011 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | 10.1.255.4/32 |
+| Loopback1012 | SVC_ETHERNET_LOOPBACK | ATM | 10.2.255.4/32 |
 
 ##### IPv6
 
 | Interface | Description | VRF | IPv6 Address |
 | --------- | ----------- | --- | ------------ |
 | Loopback0 | ROUTER_ID | default | - |
-| Loopback1001 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | - |
+| Loopback1011 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | - |
+| Loopback1012 | SVC_ETHERNET_LOOPBACK | ATM | - |
 
 ##### ISIS
 
@@ -430,11 +471,17 @@ interface Loopback0
    isis enable CORE
    isis passive
 !
-interface Loopback1001
+interface Loopback1011
    description SVC_ETHERNET_LOOPBACK
    no shutdown
    vrf ETHERNET_VPN
    ip address 10.1.255.4/32
+!
+interface Loopback1012
+   description SVC_ETHERNET_LOOPBACK
+   no shutdown
+   vrf ATM
+   ip address 10.2.255.4/32
 ```
 
 ### VLAN Interfaces
@@ -443,19 +490,19 @@ interface Loopback1001
 
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
-| Vlan1014 | SVC01_C1_VLAN_SITE01_PE04 | ETHERNET_VPN | - | False |
+| Vlan1114 | SVC01_C1_VLAN_SITE01_PE04 | ETHERNET_VPN | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
-| Vlan1014 |  ETHERNET_VPN  |  -  |  10.1.4.1/24  |  -  |  -  |  -  |
+| Vlan1114 |  ETHERNET_VPN  |  -  |  10.1.4.1/24  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
 ```eos
 !
-interface Vlan1014
+interface Vlan1114
    description SVC01_C1_VLAN_SITE01_PE04
    no shutdown
    vrf ETHERNET_VPN
@@ -493,6 +540,7 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
+| ATM | True |
 | ETHERNET_VPN | True |
 | MGMT | False |
 
@@ -501,6 +549,7 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 ```eos
 !
 ip routing
+ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 no ip routing vrf MGMT
 ```
@@ -512,6 +561,7 @@ no ip routing vrf MGMT
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
+| ATM | false |
 | ETHERNET_VPN | false |
 | MGMT | false |
 
@@ -612,11 +662,15 @@ ASN Notation: asdot
 
 | BGP Tuning |
 | ---------- |
-| update wait-install |
 | no bgp default ipv4-unicast |
 | maximum-paths 4 ecmp 4 |
 
 #### Router BGP Peer Groups
+
+##### ATM-BACKBONE
+
+| Settings | Value |
+| -------- | ----- |
 
 ##### MPLS-OVERLAY-PEERS
 
@@ -635,6 +689,7 @@ ASN Notation: asdot
 | -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
 | 10.255.0.1 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
 | 10.255.0.4 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
+| 10.2.0.3 | 65101 | ATM | - | - | - | - | - | - | - | - | - |
 
 #### Router BGP EVPN Address Family
 
@@ -654,12 +709,13 @@ ASN Notation: asdot
 
 | VLAN | Route-Distinguisher | Both Route-Target | Import Route Target | Export Route-Target | Redistribute |
 | ---- | ------------------- | ----------------- | ------------------- | ------------------- | ------------ |
-| 1014 | 10.255.1.4:11014 | 11014:11014 | - | - | learned |
+| 1114 | 10.255.1.4:11114 | 11114:11114 | - | - | learned |
 
 #### Router BGP VRFs
 
 | VRF | Route-Distinguisher | Redistribute |
 | --- | ------------------- | ------------ |
+| ATM | 10.255.1.4:12 | connected |
 | ETHERNET_VPN | 10.255.1.4:11 | connected |
 
 #### Router BGP Device Configuration
@@ -669,13 +725,15 @@ ASN Notation: asdot
 router bgp 65000
    bgp asn notation asdot
    router-id 10.255.1.4
-   update wait-install
    no bgp default ipv4-unicast
    maximum-paths 4 ecmp 4
+   neighbor ATM-BACKBONE peer group
+   neighbor ATM-BACKBONE description ATM CONNECTITVITY
    neighbor MPLS-OVERLAY-PEERS peer group
    neighbor MPLS-OVERLAY-PEERS remote-as 65000
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
+   neighbor MPLS-OVERLAY-PEERS route-map RM-MANAGE-WITH-COMMUNITIES in
    neighbor MPLS-OVERLAY-PEERS password 7 <removed>
    neighbor MPLS-OVERLAY-PEERS send-community
    neighbor MPLS-OVERLAY-PEERS maximum-routes 0
@@ -684,17 +742,32 @@ router bgp 65000
    neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.0.4 description s2-p02_Loopback0
    !
-   vlan 1014
-      rd 10.255.1.4:11014
-      route-target both 11014:11014
+   vlan 1114
+      rd 10.255.1.4:11114
+      route-target both 11114:11114
       redistribute learned
    !
    address-family evpn
+      bgp additional-paths receive
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
       neighbor MPLS-OVERLAY-PEERS activate
    !
    address-family ipv4
+      neighbor ATM-BACKBONE activate
       no neighbor MPLS-OVERLAY-PEERS activate
+   !
+   vrf ATM
+      rd 10.255.1.4:12
+      route-target import evpn 12:12
+      route-target export evpn 12:12
+      router-id 10.255.1.4
+      neighbor 10.2.0.3 peer group ATM-BACKBONE
+      neighbor 10.2.0.3 remote-as 65101
+      neighbor 10.2.0.3 description ATM CONNECTITVITY S1-CE04
+      redistribute connected
+      !
+      address-family ipv4
+         neighbor 10.2.0.3 activate
    !
    vrf ETHERNET_VPN
       rd 10.255.1.4:11
@@ -765,18 +838,84 @@ mpls ip
 ```eos
 ```
 
+## Filters
+
+### IP Community-lists
+
+#### IP Community-lists Summary
+
+| Name | Action | Communities / Regexp |
+| ---- | ------ | -------------------- |
+| CL-INGRESS-ATM-LP-90 | permit | 65000:10090 |
+| CL-INGRESS-ATM-LP-110 | permit | 65000:10110 |
+
+#### IP Community-lists Device Configuration
+
+```eos
+!
+ip community-list CL-INGRESS-ATM-LP-90 permit 65000:10090
+ip community-list CL-INGRESS-ATM-LP-110 permit 65000:10110
+```
+
+### Prefix-lists
+
+#### Prefix-lists Summary
+
+##### PL-ATM-FAKE-PREFIX
+
+| Sequence | Action |
+| -------- | ------ |
+| 10 | permit 10.2.254.0/24 |
+
+#### Prefix-lists Device Configuration
+
+```eos
+!
+ip prefix-list PL-ATM-FAKE-PREFIX
+   seq 10 permit 10.2.254.0/24
+```
+
+### Route-maps
+
+#### Route-maps Summary
+
+##### RM-MANAGE-WITH-COMMUNITIES
+
+| Sequence | Type | Match | Set | Sub-Route-Map | Continue |
+| -------- | ---- | ----- | --- | ------------- | -------- |
+| 10 | permit | community CL-INGRESS-ATM-LP-90 | local-preference 90 | - | - |
+| 20 | permit | community CL-INGRESS-ATM-LP-110 | local-preference 110 | - | - |
+
+#### Route-maps Device Configuration
+
+```eos
+!
+route-map RM-MANAGE-WITH-COMMUNITIES permit 10
+   description Configure LP to 90 for ATM
+   match community CL-INGRESS-ATM-LP-90
+   set local-preference 90
+!
+route-map RM-MANAGE-WITH-COMMUNITIES permit 20
+   description Configure LP to 110 for ATM
+   match community CL-INGRESS-ATM-LP-110
+   set local-preference 110
+```
+
 ## VRF Instances
 
 ### VRF Instances Summary
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
+| ATM | enabled |
 | ETHERNET_VPN | enabled |
 | MGMT | disabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
+!
+vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
