--- a/config-builder/documentation/devices/s2-ce01.md
+++ b/config-builder/documentation/devices/s2-ce01.md
@@ -10,6 +10,7 @@
   - [Management API HTTP](#management-api-http)
 - [Authentication](#authentication)
   - [Local Users](#local-users)
+  - [AAA Authentication](#aaa-authentication)
   - [AAA Authorization](#aaa-authorization)
 - [Aliases Device Configuration](#aliases-device-configuration)
 - [VLANs](#vlans)
@@ -23,6 +24,7 @@
   - [IP Routing](#ip-routing)
   - [IPv6 Routing](#ipv6-routing)
   - [Static Routes](#static-routes)
+  - [Router BGP](#router-bgp)
 - [VRF Instances](#vrf-instances)
   - [VRF Instances Summary](#vrf-instances-summary)
   - [VRF Instances Device Configuration](#vrf-instances-device-configuration)
@@ -186,6 +188,22 @@ username arista privilege 15 role network-admin secret sha512 <removed>
 username tom privilege 15 role network-admin secret sha512 <removed>
 ```
 
+### AAA Authentication
+
+#### AAA Authentication Summary
+
+| Type | Sub-type | User Stores |
+| ---- | -------- | ---------- |
+
+Policy local allow-nopassword-remote-login has been enabled.
+
+#### AAA Authentication Device Configuration
+
+```eos
+aaa authentication policy local allow-nopassword-remote-login
+!
+```
+
 ### AAA Authorization
 
 #### AAA Authorization Summary
@@ -233,14 +251,18 @@ alias summary6 show ipv6 bgp summary
 
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
-| 1015 | SVC01_C1_VLAN_SITE02_PE01 | - |
+| 1115 | SVC01_C1_VLAN_SITE02_PE01 | - |
+| 1205 | L3VPN_Only | - |
 
 ### VLANs Device Configuration
 
 ```eos
 !
-vlan 1015
+vlan 1115
    name SVC01_C1_VLAN_SITE02_PE01
+!
+vlan 1205
+   name L3VPN_Only
 ```
 
 ## Interfaces
@@ -272,23 +294,31 @@ interface Ethernet1
 
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
-| Vlan1015 | SVC01_C1_VLAN_SITE02_PE01 - VRF ETHERNET_VPN | ETHERNET_VPN | - | False |
+| Vlan1115 | SVC01_C1_VLAN_SITE02_PE01 - VRF ETHERNET_VPN | ETHERNET_VPN | - | False |
+| Vlan1205 | L3VPN_Only - VRF ATM | ATM | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
-| Vlan1015 |  ETHERNET_VPN  |  10.1.5.21/24  |  -  |  -  |  -  |  -  |
+| Vlan1115 |  ETHERNET_VPN  |  10.1.5.21/24  |  -  |  -  |  -  |  -  |
+| Vlan1205 |  ATM  |  10.2.1.21/24  |  -  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
 ```eos
 !
-interface Vlan1015
+interface Vlan1115
    description SVC01_C1_VLAN_SITE02_PE01 - VRF ETHERNET_VPN
    no shutdown
    vrf ETHERNET_VPN
    ip address 10.1.5.21/24
+!
+interface Vlan1205
+   description L3VPN_Only - VRF ATM
+   no shutdown
+   vrf ATM
+   ip address 10.2.1.21/24
 ```
 
 ## Routing
@@ -309,6 +339,7 @@ service routing protocols model multi-agent
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
+| ATM | True |
 | ETHERNET_VPN | True |
 | MGMT | True |
 
@@ -317,6 +348,7 @@ service routing protocols model multi-agent
 ```eos
 !
 ip routing
+ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf MGMT
 ```
@@ -328,6 +360,7 @@ ip routing vrf MGMT
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
+| ATM | false |
 | default | false |
 | ETHERNET_VPN | false |
 | MGMT | false |
@@ -349,18 +382,69 @@ ip route vrf ETHERNET_VPN 0.0.0.0/0 10.1.5.1
 ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 ```
 
+### Router BGP
+
+ASN Notation: asplain
+
+#### Router BGP Summary
+
+| BGP AS | Router ID |
+| ------ | --------- |
+| 65102 | - |
+
+#### Router BGP Peer Groups
+
+##### MPLS-BACKBONE
+
+| Settings | Value |
+| -------- | ----- |
+| Remote AS | 65000 |
+
+#### BGP Neighbors
+
+| Neighbor | Remote AS | VRF | Shutdown | Send-community | Maximum-routes | Allowas-in | BFD | RIB Pre-Policy Retain | Route-Reflector Client | Passive | TTL Max Hops |
+| -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
+| 10.2.1.1 | Inherited from peer group MPLS-BACKBONE | ATM | - | - | - | - | - | - | - | - | - |
+
+#### Router BGP VRFs
+
+| VRF | Route-Distinguisher | Redistribute |
+| --- | ------------------- | ------------ |
+| ATM | - | connected |
+
+#### Router BGP Device Configuration
+
+```eos
+!
+router bgp 65102
+   neighbor MPLS-BACKBONE peer group
+   neighbor MPLS-BACKBONE remote-as 65000
+   neighbor MPLS-BACKBONE description MPLS CONNECTITVITY
+   !
+   vrf ATM
+      neighbor 10.2.1.1 peer group MPLS-BACKBONE
+      neighbor 10.2.1.1 description MPLS CONNECTITVITY S2-PE01
+      redistribute connected
+      !
+      address-family ipv4
+         neighbor 10.2.1.1 activate
+```
+
 ## VRF Instances
 
 ### VRF Instances Summary
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
+| ATM | enabled |
 | ETHERNET_VPN | enabled |
 | MGMT | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
+!
+vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
