--- a/config-builder/documentation/devices/s2-pe01.md
+++ b/config-builder/documentation/devices/s2-pe01.md
@@ -13,6 +13,7 @@
 - [Authentication](#authentication)
   - [Local Users](#local-users)
   - [Enable Password](#enable-password)
+  - [AAA Authentication](#aaa-authentication)
   - [AAA Authorization](#aaa-authorization)
 - [Aliases Device Configuration](#aliases-device-configuration)
 - [Spanning Tree](#spanning-tree)
@@ -43,6 +44,10 @@
   - [MPLS Interfaces](#mpls-interfaces)
 - [Multicast](#multicast)
   - [IP IGMP Snooping](#ip-igmp-snooping)
+- [Filters](#filters)
+  - [IP Community-lists](#ip-community-lists)
+  - [Prefix-lists](#prefix-lists)
+  - [Route-maps](#route-maps)
 - [VRF Instances](#vrf-instances)
   - [VRF Instances Summary](#vrf-instances-summary)
   - [VRF Instances Device Configuration](#vrf-instances-device-configuration)
@@ -239,6 +244,22 @@ username tom privilege 15 role network-admin secret sha512 <removed>
 
 Enable password has been disabled
 
+### AAA Authentication
+
+#### AAA Authentication Summary
+
+| Type | Sub-type | User Stores |
+| ---- | -------- | ---------- |
+
+Policy local allow-nopassword-remote-login has been enabled.
+
+#### AAA Authentication Device Configuration
+
+```eos
+aaa authentication policy local allow-nopassword-remote-login
+!
+```
+
 ### AAA Authorization
 
 #### AAA Authorization Summary
@@ -314,14 +335,18 @@ vlan internal order ascending range 1006 1199
 
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
-| 1015 | SVC01_C1_VLAN_SITE02_PE01 | - |
+| 1115 | SVC01_C1_VLAN_SITE02_PE01 | - |
+| 1205 | L3VPN-EXIT-POINT | - |
 
 ### VLANs Device Configuration
 
 ```eos
 !
-vlan 1015
+vlan 1115
    name SVC01_C1_VLAN_SITE02_PE01
+!
+vlan 1205
+   name L3VPN-EXIT-POINT
 ```
 
 ## Interfaces
@@ -403,14 +428,16 @@ interface Ethernet3
 | Interface | Description | VRF | IP Address |
 | --------- | ----------- | --- | ---------- |
 | Loopback0 | ROUTER_ID | default | 10.255.1.5/32 |
-| Loopback1001 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | 10.1.255.5/32 |
+| Loopback1011 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | 10.1.255.5/32 |
+| Loopback1012 | SVC_ETHERNET_LOOPBACK | ATM | 10.2.255.5/32 |
 
 ##### IPv6
 
 | Interface | Description | VRF | IPv6 Address |
 | --------- | ----------- | --- | ------------ |
 | Loopback0 | ROUTER_ID | default | - |
-| Loopback1001 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | - |
+| Loopback1011 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | - |
+| Loopback1012 | SVC_ETHERNET_LOOPBACK | ATM | - |
 
 ##### ISIS
 
@@ -430,11 +457,17 @@ interface Loopback0
    isis enable CORE
    isis passive
 !
-interface Loopback1001
+interface Loopback1011
    description SVC_ETHERNET_LOOPBACK
    no shutdown
    vrf ETHERNET_VPN
    ip address 10.1.255.5/32
+!
+interface Loopback1012
+   description SVC_ETHERNET_LOOPBACK
+   no shutdown
+   vrf ATM
+   ip address 10.2.255.5/32
 ```
 
 ### VLAN Interfaces
@@ -443,23 +476,31 @@ interface Loopback1001
 
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
-| Vlan1015 | SVC01_C1_VLAN_SITE02_PE01 | ETHERNET_VPN | - | False |
+| Vlan1115 | SVC01_C1_VLAN_SITE02_PE01 | ETHERNET_VPN | - | False |
+| Vlan1205 | L3VPN-EXIT-POINT | ATM | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
-| Vlan1015 |  ETHERNET_VPN  |  -  |  10.1.5.1/24  |  -  |  -  |  -  |
+| Vlan1115 |  ETHERNET_VPN  |  -  |  10.1.5.1/24  |  -  |  -  |  -  |
+| Vlan1205 |  ATM  |  -  |  10.2.1.1/24  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
 ```eos
 !
-interface Vlan1015
+interface Vlan1115
    description SVC01_C1_VLAN_SITE02_PE01
    no shutdown
    vrf ETHERNET_VPN
    ip address virtual 10.1.5.1/24
+!
+interface Vlan1205
+   description L3VPN-EXIT-POINT
+   no shutdown
+   vrf ATM
+   ip address virtual 10.2.1.1/24
 ```
 
 ## Routing
@@ -493,6 +534,7 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
+| ATM | True |
 | ETHERNET_VPN | True |
 | MGMT | False |
 
@@ -501,6 +543,7 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 ```eos
 !
 ip routing
+ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 no ip routing vrf MGMT
 ```
@@ -512,6 +555,7 @@ no ip routing vrf MGMT
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
+| ATM | false |
 | ETHERNET_VPN | false |
 | MGMT | false |
 
@@ -612,11 +656,15 @@ ASN Notation: asdot
 
 | BGP Tuning |
 | ---------- |
-| update wait-install |
 | no bgp default ipv4-unicast |
 | maximum-paths 4 ecmp 4 |
 
 #### Router BGP Peer Groups
+
+##### ATM-BACKBONE
+
+| Settings | Value |
+| -------- | ----- |
 
 ##### MPLS-OVERLAY-PEERS
 
@@ -635,6 +683,7 @@ ASN Notation: asdot
 | -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
 | 10.255.0.1 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
 | 10.255.0.4 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
+| 10.2.1.21 | 65102 | ATM | - | - | - | - | - | - | - | - | - |
 
 #### Router BGP EVPN Address Family
 
@@ -654,12 +703,14 @@ ASN Notation: asdot
 
 | VLAN | Route-Distinguisher | Both Route-Target | Import Route Target | Export Route-Target | Redistribute |
 | ---- | ------------------- | ----------------- | ------------------- | ------------------- | ------------ |
-| 1015 | 10.255.1.5:11015 | 11015:11015 | - | - | learned |
+| 1115 | 10.255.1.5:11115 | 11115:11115 | - | - | learned |
+| 1205 | 10.255.1.5:13205 | 13205:13205 | - | - | learned |
 
 #### Router BGP VRFs
 
 | VRF | Route-Distinguisher | Redistribute |
 | --- | ------------------- | ------------ |
+| ATM | 10.255.1.5:12 | connected |
 | ETHERNET_VPN | 10.255.1.5:11 | connected |
 
 #### Router BGP Device Configuration
@@ -669,13 +720,15 @@ ASN Notation: asdot
 router bgp 65000
    bgp asn notation asdot
    router-id 10.255.1.5
-   update wait-install
    no bgp default ipv4-unicast
    maximum-paths 4 ecmp 4
+   neighbor ATM-BACKBONE peer group
+   neighbor ATM-BACKBONE description ATM CONNECTITVITY
    neighbor MPLS-OVERLAY-PEERS peer group
    neighbor MPLS-OVERLAY-PEERS remote-as 65000
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
+   neighbor MPLS-OVERLAY-PEERS route-map RM-MANAGE-WITH-COMMUNITIES in
    neighbor MPLS-OVERLAY-PEERS password 7 <removed>
    neighbor MPLS-OVERLAY-PEERS send-community
    neighbor MPLS-OVERLAY-PEERS maximum-routes 0
@@ -684,17 +737,37 @@ router bgp 65000
    neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.0.4 description s2-p02_Loopback0
    !
-   vlan 1015
-      rd 10.255.1.5:11015
-      route-target both 11015:11015
+   vlan 1115
+      rd 10.255.1.5:11115
+      route-target both 11115:11115
+      redistribute learned
+   !
+   vlan 1205
+      rd 10.255.1.5:13205
+      route-target both 13205:13205
       redistribute learned
    !
    address-family evpn
+      bgp additional-paths receive
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
       neighbor MPLS-OVERLAY-PEERS activate
    !
    address-family ipv4
+      neighbor ATM-BACKBONE activate
       no neighbor MPLS-OVERLAY-PEERS activate
+   !
+   vrf ATM
+      rd 10.255.1.5:12
+      route-target import evpn 12:12
+      route-target export evpn 12:12
+      router-id 10.255.1.5
+      neighbor 10.2.1.21 peer group ATM-BACKBONE
+      neighbor 10.2.1.21 remote-as 65102
+      neighbor 10.2.1.21 description ATM CONNECTITVITY S2-CE01
+      redistribute connected
+      !
+      address-family ipv4
+         neighbor 10.2.1.21 activate
    !
    vrf ETHERNET_VPN
       rd 10.255.1.5:11
@@ -765,18 +838,84 @@ mpls ip
 ```eos
 ```
 
+## Filters
+
+### IP Community-lists
+
+#### IP Community-lists Summary
+
+| Name | Action | Communities / Regexp |
+| ---- | ------ | -------------------- |
+| CL-INGRESS-ATM-LP-90 | permit | 65000:10090 |
+| CL-INGRESS-ATM-LP-110 | permit | 65000:10110 |
+
+#### IP Community-lists Device Configuration
+
+```eos
+!
+ip community-list CL-INGRESS-ATM-LP-90 permit 65000:10090
+ip community-list CL-INGRESS-ATM-LP-110 permit 65000:10110
+```
+
+### Prefix-lists
+
+#### Prefix-lists Summary
+
+##### PL-ATM-FAKE-PREFIX
+
+| Sequence | Action |
+| -------- | ------ |
+| 10 | permit 10.2.254.0/24 |
+
+#### Prefix-lists Device Configuration
+
+```eos
+!
+ip prefix-list PL-ATM-FAKE-PREFIX
+   seq 10 permit 10.2.254.0/24
+```
+
+### Route-maps
+
+#### Route-maps Summary
+
+##### RM-MANAGE-WITH-COMMUNITIES
+
+| Sequence | Type | Match | Set | Sub-Route-Map | Continue |
+| -------- | ---- | ----- | --- | ------------- | -------- |
+| 10 | permit | community CL-INGRESS-ATM-LP-90 | local-preference 90 | - | - |
+| 20 | permit | community CL-INGRESS-ATM-LP-110 | local-preference 110 | - | - |
+
+#### Route-maps Device Configuration
+
+```eos
+!
+route-map RM-MANAGE-WITH-COMMUNITIES permit 10
+   description Configure LP to 90 for ATM
+   match community CL-INGRESS-ATM-LP-90
+   set local-preference 90
+!
+route-map RM-MANAGE-WITH-COMMUNITIES permit 20
+   description Configure LP to 110 for ATM
+   match community CL-INGRESS-ATM-LP-110
+   set local-preference 110
+```
+
 ## VRF Instances
 
 ### VRF Instances Summary
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
+| ATM | enabled |
 | ETHERNET_VPN | enabled |
 | MGMT | disabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
+!
+vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
